methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:51: error: Unmatched closing brace '}' ignored here
}
^